<uk.co.senab.photoview.PhotoView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/image"
    android:background="@android:color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent" />
